--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "aiohttp (>=3.11.12,<4.0.0)",
     "streamlit (>=1.42.0,<2.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "pypdf2 (>=3.0.1,<4.0.0)"
+    "pypdf (>=5.3.0,<6.0.0)",
 ]
 
 [tool.poetry]
